--- a/arabic/arabic.html
+++ b/arabic/arabic.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-09-25 Mon 00:47 -->
+<!-- 2023-09-27 Wed 03:23 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title><span class='hebrew'>לימוד ערבית</span></title>
@@ -241,21 +241,21 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org13666f9">1. משאבים</a></li>
-<li><a href="#orgba150cf">2. הכתב הערבי</a></li>
-<li><a href="#org346ff0e">3. ערבית מדוברת בניב של המזרח־הקרוב (ניב שָׁאמִי), <span class='ruqaa'>عامية شامية</span></a></li>
-<li><a href="#orgbeade45">4. <span class='hebrew'>ערבית ספרותית</span>, <span class='latin'>MSA</span>, <span class='ruqaa'>فصحة</span></a></li>
+<li><a href="#orgb3455fb">1. משאבים</a></li>
+<li><a href="#orgf3cd2aa">2. הכתב הערבי</a></li>
+<li><a href="#org0b18baa">3. ערבית מדוברת בניב של המזרח־הקרוב (ניב שָׁאמִי), <span class='ruqaa'>عامية شامية</span></a></li>
+<li><a href="#orgd6a9833">4. <span class='hebrew'>ערבית ספרותית</span>, <span class='latin'>MSA</span>, <span class='ruqaa'>فصحة</span></a></li>
 </ul>
 </div>
 </div>
 <script src="https://mayer-goldberg.github.io/website/hebrew-support/gmayer-org-mode-web.js"></script>
 
-<div id="outline-container-org13666f9" class="outline-2">
-<h2 id="org13666f9"><span class="section-number-2">1</span> משאבים</h2>
+<div id="outline-container-orgb3455fb" class="outline-2">
+<h2 id="orgb3455fb"><span class="section-number-2">1</span> משאבים</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org3f77835" class="outline-3">
-<h3 id="org3f77835"><span class="section-number-3">1.1</span> ספרים</h3>
+<div id="outline-container-org9fd081e" class="outline-3">
+<h3 id="org9fd081e"><span class="section-number-3">1.1</span> ספרים</h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li>הספרים של יוחנן אליחי
@@ -282,8 +282,8 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-org3140e23" class="outline-3">
-<h3 id="org3140e23"><span class="section-number-3">1.2</span> מלונים מקוונים</h3>
+<div id="outline-container-orgbb3c2c7" class="outline-3">
+<h3 id="orgbb3c2c7"><span class="section-number-3">1.2</span> מלונים מקוונים</h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><a href="https://milon.madrasafree.com/">המלון המקוון של <b>מדרסה</b> לערבית מדוברת</a>. המלון פותח, מומש, ותוחזק על ידי <a href="https://rothfarb.info/"><b>רונן רוטפרב</b></a>. לאחר שנים שבהן ניהל את הפרוייקט לבדו, רונן העביר את הפרוייקט <a href="https://madrasafree.com/">לבית הספר <b>מדרסה</b> לערבית</a>, ואלו מתחזקים אותו כעת.</li>
@@ -292,47 +292,76 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-org70b1b7c" class="outline-3">
-<h3 id="org70b1b7c"><span class="section-number-3">1.3</span> תרגומים אינטרלינאריים</h3>
+<div id="outline-container-orgbd4cd39" class="outline-3">
+<h3 id="orgbd4cd39"><span class="section-number-3">1.3</span> תרגומים אינטרלינאריים</h3>
 </div>
 </div>
-<div id="outline-container-orgba150cf" class="outline-2">
-<h2 id="orgba150cf"><span class="section-number-2">2</span> הכתב הערבי</h2>
+<div id="outline-container-orgf3cd2aa" class="outline-2">
+<h2 id="orgf3cd2aa"><span class="section-number-2">2</span> הכתב הערבי</h2>
 <div class="outline-text-2" id="text-2">
 </div>
-<div id="outline-container-orgd3b9026" class="outline-3">
-<h3 id="orgd3b9026"><span class="section-number-3">2.1</span> הסדר המלוני</h3>
+<div id="outline-container-org2651029" class="outline-3">
+<h3 id="org2651029"><span class="section-number-3">2.1</span> הסדר המלוני</h3>
 </div>
-<div id="outline-container-org33d674e" class="outline-3">
-<h3 id="org33d674e"><span class="section-number-3">2.2</span> הקלדה עיוורת</h3>
+<div id="outline-container-orga5f3816" class="outline-3">
+<h3 id="orga5f3816"><span class="section-number-3">2.2</span> הקלדה עיוורת</h3>
 </div>
-<div id="outline-container-orgfa1ed68" class="outline-3">
-<h3 id="orgfa1ed68"><span class="section-number-3">2.3</span> כתיבה תמה</h3>
+<div id="outline-container-org1370cec" class="outline-3">
+<h3 id="org1370cec"><span class="section-number-3">2.3</span> כתיבה תמה</h3>
 </div>
 </div>
-<div id="outline-container-org346ff0e" class="outline-2">
-<h2 id="org346ff0e"><span class="section-number-2">3</span> ערבית מדוברת בניב של המזרח־הקרוב (ניב שָׁאמִי), <span class='ruqaa'>عامية شامية</span></h2>
+<div id="outline-container-org0b18baa" class="outline-2">
+<h2 id="org0b18baa"><span class="section-number-2">3</span> ערבית מדוברת בניב של המזרח־הקרוב (ניב שָׁאמִי), <span class='ruqaa'>عامية شامية</span></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 ערבית מדוברת של המזרח הקרוב היא אוסף של להגים המדוברים באיזור שהיסטורית נקרא בשם <b>סוריה הגדולה</b>, או שָׁאם (<span class='naskh'>شام</span>). האיזור כולל את לבנון, סוריה, ירדן, ישראל, הגדה המערבית, ורצועת עזה. מבחינה היסטורית, <b>סוריה הגדולה</b> כוללת גם את עיראק, אבל ערבית מדוברת עיראקית שונה מאד משאר הלהגים של <b>סוריה הגדולה</b>, וכולל השפעות רבות מפרסית ותורכית, ולכן מקובל שלא לכלול אותו בלהגים של <b>סוריה הגדולה</b>, אלא להתייחס אליו כלהג נפרד.
 </p>
 </div>
 
-<div id="outline-container-org0623d67" class="outline-3">
-<h3 id="org0623d67"><span class="section-number-3">3.1</span> Timeline</h3>
+<div id="outline-container-org2d6d837" class="outline-3">
+<h3 id="org2d6d837"><span class="section-number-3">3.1</span> Timeline</h3>
 <div class="outline-text-3" id="text-3-1">
 </div>
 <ol class="org-ol">
-<li><a id="org7a3fe1f"></a><span class="timestamp-wrapper"><span class="timestamp">&lt;2023-09-25 Mon&gt;</span></span><br />
+<li><a id="orgb060352"></a><span class="timestamp-wrapper"><span class="timestamp">&lt;2023-09-27 Wed&gt;</span></span><br />
 <div class="outline-text-4" id="text-3-1-1">
+<p>
+כדי להבין אמרה לבנונית, צריך לעשות סדר במונחים של קבוצות דתיות שונות:
+</p>
+<ul class="org-ul">
+<li><span class='naskh'>كتوليك</span>: יוונים קתולים המקיימים את הריטוּס הביזנטי</li>
+<li><span class='naskh'>اللّاتين</span>: קתולים המקיימים את הריטוּס הרומי־לטיני</li>
+<li><span class='naskh'>الرّوم</span>: יוונים אורתודוקסים</li>
+</ul>
+
+<p>
+כעת ניתן להבין אמרה לבנונית מהמלון של אניס פרחה (<span class='naskh'>انيس فريحة</span>):
+</p>
+
+<p>
+<span class='naskh'>إن كانِ الكنافِة بيدخلها توم، الموراني بحبّ الرُّوم.</span>
+</p>
+
+<p>
+«אם [כמו ש…] הכנאפה נכנס לתוכה שום, [ככה] המרונים אוהבים את היוונים־אורתודוקסים.»
+</p>
+
+<p>
+אמרה לבנונית שמדגישה לא רק את השנאה שבין פלגים שונים, אלא גם את הבלגן בטרמינולוגיה הדתית שם.
+</p>
+</div>
+</li>
+
+<li><a id="org98c88a5"></a><span class="timestamp-wrapper"><span class="timestamp">&lt;2023-09-25 Mon&gt;</span></span><br />
+<div class="outline-text-4" id="text-3-1-2">
 <p>
 שברתי את הראש מדוע המלה <span class='naskh'>حامل</span>, שפירושה "אשה בהריון" היא מלה זכרית ומקבלת שמות תואר בזכר. חיטטתי במלונים עד שקלטתי שזו גם המלה ל־"נשא", במובן של נשא של מחלה… ולכן כותבים <span class='naskh'>حامل جديد</span> ולא <span class='naskh'>حامل جديدة</span>…
 </p>
 </div>
 </li>
 
-<li><a id="org1efba03"></a><span class="timestamp-wrapper"><span class="timestamp">&lt;2023-09-23 Sat&gt;</span></span><br />
-<div class="outline-text-4" id="text-3-1-2">
+<li><a id="org5c1f4f6"></a><span class="timestamp-wrapper"><span class="timestamp">&lt;2023-09-23 Sat&gt;</span></span><br />
+<div class="outline-text-4" id="text-3-1-3">
 <p>
 ממשיך ללמוד כרטיסים. לא הוספתי חדשים, אבל שיניתי את אופן הלימוד שלי: כעת כל פעם ש־"הצד השני" של הכרטיס הוא בערבית, אני רושם את המלה באותיות ערביות ומשווה. זו עבודה רבה יותר אבל יש לה יתרונות חשובים:
 </p>
@@ -353,8 +382,8 @@ for the JavaScript code in this tag.
 </div>
 </li>
 
-<li><a id="org407f7cf"></a><span class="timestamp-wrapper"><span class="timestamp">&lt;2023-09-21 Thu&gt;</span></span><br />
-<div class="outline-text-4" id="text-3-1-3">
+<li><a id="orgb375d3e"></a><span class="timestamp-wrapper"><span class="timestamp">&lt;2023-09-21 Thu&gt;</span></span><br />
+<div class="outline-text-4" id="text-3-1-4">
 <p>
 הכרטסת שלי כוללת 4261 כרטיסים. הוספתי 230+ כרטיסים מאז תחילת החודש. זה קצת מאכזב. קיוויתי שאוכל להוסיף מעל לאלף כרטיסים חדשים, ולא קרה. אני צריך להגביר את הקצב לפני תחילת הסמסטר.
 </p>
@@ -372,13 +401,13 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-orgbeade45" class="outline-2">
-<h2 id="orgbeade45"><span class="section-number-2">4</span> <span class='hebrew'>ערבית ספרותית</span>, <span class='latin'>MSA</span>, <span class='ruqaa'>فصحة</span></h2>
+<div id="outline-container-orgd6a9833" class="outline-2">
+<h2 id="orgd6a9833"><span class="section-number-2">4</span> <span class='hebrew'>ערבית ספרותית</span>, <span class='latin'>MSA</span>, <span class='ruqaa'>فصحة</span></h2>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Mayer Goldberg (<span class='hebrew'>מֵאִיר גּוֹלְדְּבֵּרְג</span>)</p>
-<p class="date">Created: 2023-09-25 Mon 00:47</p>
+<p class="date">Created: 2023-09-27 Wed 03:23</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
