--- a/arabic/arabic.html
+++ b/arabic/arabic.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-09-27 Wed 03:23 -->
+<!-- 2023-10-04 Wed 22:18 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title><span class='hebrew'>לימוד ערבית</span></title>
@@ -241,21 +241,21 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgb3455fb">1. משאבים</a></li>
-<li><a href="#orgf3cd2aa">2. הכתב הערבי</a></li>
-<li><a href="#org0b18baa">3. ערבית מדוברת בניב של המזרח־הקרוב (ניב שָׁאמִי), <span class='ruqaa'>عامية شامية</span></a></li>
-<li><a href="#orgd6a9833">4. <span class='hebrew'>ערבית ספרותית</span>, <span class='latin'>MSA</span>, <span class='ruqaa'>فصحة</span></a></li>
+<li><a href="#org1371e3a">1. משאבים</a></li>
+<li><a href="#org79b408a">2. הכתב הערבי</a></li>
+<li><a href="#org3f60032">3. ערבית מדוברת בניב של המזרח־הקרוב (ניב שָׁאמִי), <span class='ruqaa'>عامية شامية</span></a></li>
+<li><a href="#orgd263ea3">4. ערבית ספרותית, <span class='latin'>MSA</span>, <span class='ruqaa'>فصحة</span></a></li>
 </ul>
 </div>
 </div>
 <script src="https://mayer-goldberg.github.io/website/hebrew-support/gmayer-org-mode-web.js"></script>
 
-<div id="outline-container-orgb3455fb" class="outline-2">
-<h2 id="orgb3455fb"><span class="section-number-2">1</span> משאבים</h2>
+<div id="outline-container-org1371e3a" class="outline-2">
+<h2 id="org1371e3a"><span class="section-number-2">1</span> משאבים</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org9fd081e" class="outline-3">
-<h3 id="org9fd081e"><span class="section-number-3">1.1</span> ספרים</h3>
+<div id="outline-container-orga9eef40" class="outline-3">
+<h3 id="orga9eef40"><span class="section-number-3">1.1</span> ספרים</h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li>הספרים של יוחנן אליחי
@@ -278,12 +278,13 @@ for the JavaScript code in this tag.
 </ul></li>
 </ul></li>
 <li>המלון האטימולוגי לערבית מדוברת ולעברית מאת <b>אברהם שטאל</b> (כריכה קשה, שני כרכים): זה המלון השימושי ביותר שיש לי לערבית מדוברת. מפורט מאד, כולל המוני מלים ודוגמאות. כבר לא בדפוס, אבל אפשר עדיין למצוא אותו בחנויות לספרים משומשים. אין בו את כל העושר שיש במילונים של אליחי, שנותן הרבה מלים נרדפות, ובכל זאת, יש לו הוא מכסה תחומים שאליחי לא נכנס אליהם, ואוצר המלים עדכני יותר וגדול מאד.</li>
+<li>הלקסיקון הלבנוני־אנגלי של רוג'ר מכלוף (<span class='latin'>Roger Makhlouf</span>). הלקסיקון באנגלית, משתמש בתעתיק יחודי עם אותיות שאינן מופיעות באף שפה — מן אותיות שמורכבות מחלקי אותיות לטיניות. תעתיק יחודי שלא דומה לאלפבית הפונטי <span class='latin'>IPA</span>, שלא מבוסס על צורות תעתיק מוכרות, שדורש למוד במיוחד, שלא ישרת את הלומדים בקונטקסט אחר. זו בעיה גדולה, משום שמילונים לעגה הלבנונית מעטים ודלים, ודווקא המלון הזה מכיל הרבה מלים מעניינות ששווה להכיר. מצער מאד שהכותב לא הוסיף <b>גם</b> את הכתיב באותיות ערביות. אם הקוראים לא יוסיפו את הכתיב בערבית ליד כל ערך, כל המלון הזה יהיה חסר ערך…</li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-orgbb3c2c7" class="outline-3">
-<h3 id="orgbb3c2c7"><span class="section-number-3">1.2</span> מלונים מקוונים</h3>
+<div id="outline-container-orgb5e9fc8" class="outline-3">
+<h3 id="orgb5e9fc8"><span class="section-number-3">1.2</span> מלונים מקוונים</h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><a href="https://milon.madrasafree.com/">המלון המקוון של <b>מדרסה</b> לערבית מדוברת</a>. המלון פותח, מומש, ותוחזק על ידי <a href="https://rothfarb.info/"><b>רונן רוטפרב</b></a>. לאחר שנים שבהן ניהל את הפרוייקט לבדו, רונן העביר את הפרוייקט <a href="https://madrasafree.com/">לבית הספר <b>מדרסה</b> לערבית</a>, ואלו מתחזקים אותו כעת.</li>
@@ -291,42 +292,41 @@ for the JavaScript code in this tag.
 </ul>
 </div>
 </div>
-
-<div id="outline-container-orgbd4cd39" class="outline-3">
-<h3 id="orgbd4cd39"><span class="section-number-3">1.3</span> תרגומים אינטרלינאריים</h3>
+<div id="outline-container-orgec3e6d0" class="outline-3">
+<h3 id="orgec3e6d0"><span class="section-number-3">1.3</span> תרגומים אינטרלינאריים</h3>
 </div>
 </div>
-<div id="outline-container-orgf3cd2aa" class="outline-2">
-<h2 id="orgf3cd2aa"><span class="section-number-2">2</span> הכתב הערבי</h2>
+<div id="outline-container-org79b408a" class="outline-2">
+<h2 id="org79b408a"><span class="section-number-2">2</span> הכתב הערבי</h2>
 <div class="outline-text-2" id="text-2">
 </div>
-<div id="outline-container-org2651029" class="outline-3">
-<h3 id="org2651029"><span class="section-number-3">2.1</span> הסדר המלוני</h3>
+<div id="outline-container-org6b1ff1d" class="outline-3">
+<h3 id="org6b1ff1d"><span class="section-number-3">2.1</span> הסדר המלוני</h3>
 </div>
-<div id="outline-container-orga5f3816" class="outline-3">
-<h3 id="orga5f3816"><span class="section-number-3">2.2</span> הקלדה עיוורת</h3>
+<div id="outline-container-orgbd067da" class="outline-3">
+<h3 id="orgbd067da"><span class="section-number-3">2.2</span> הקלדה עיוורת</h3>
 </div>
-<div id="outline-container-org1370cec" class="outline-3">
-<h3 id="org1370cec"><span class="section-number-3">2.3</span> כתיבה תמה</h3>
+<div id="outline-container-org50fb55f" class="outline-3">
+<h3 id="org50fb55f"><span class="section-number-3">2.3</span> כתיבה תמה</h3>
 </div>
 </div>
-<div id="outline-container-org0b18baa" class="outline-2">
-<h2 id="org0b18baa"><span class="section-number-2">3</span> ערבית מדוברת בניב של המזרח־הקרוב (ניב שָׁאמִי), <span class='ruqaa'>عامية شامية</span></h2>
+<div id="outline-container-org3f60032" class="outline-2">
+<h2 id="org3f60032"><span class="section-number-2">3</span> ערבית מדוברת בניב של המזרח־הקרוב (ניב שָׁאמִי), <span class='ruqaa'>عامية شامية</span></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 ערבית מדוברת של המזרח הקרוב היא אוסף של להגים המדוברים באיזור שהיסטורית נקרא בשם <b>סוריה הגדולה</b>, או שָׁאם (<span class='naskh'>شام</span>). האיזור כולל את לבנון, סוריה, ירדן, ישראל, הגדה המערבית, ורצועת עזה. מבחינה היסטורית, <b>סוריה הגדולה</b> כוללת גם את עיראק, אבל ערבית מדוברת עיראקית שונה מאד משאר הלהגים של <b>סוריה הגדולה</b>, וכולל השפעות רבות מפרסית ותורכית, ולכן מקובל שלא לכלול אותו בלהגים של <b>סוריה הגדולה</b>, אלא להתייחס אליו כלהג נפרד.
 </p>
 </div>
 
-<div id="outline-container-org2d6d837" class="outline-3">
-<h3 id="org2d6d837"><span class="section-number-3">3.1</span> Timeline</h3>
+<div id="outline-container-org73d849f" class="outline-3">
+<h3 id="org73d849f"><span class="section-number-3">3.1</span> Timeline</h3>
 <div class="outline-text-3" id="text-3-1">
 </div>
 <ol class="org-ol">
-<li><a id="orgb060352"></a><span class="timestamp-wrapper"><span class="timestamp">&lt;2023-09-27 Wed&gt;</span></span><br />
+<li><a id="org0d07082"></a><span class="timestamp-wrapper"><span class="timestamp">&lt;2023-09-27 Wed&gt;</span></span><br />
 <div class="outline-text-4" id="text-3-1-1">
 <p>
-כדי להבין אמרה לבנונית, צריך לעשות סדר במונחים של קבוצות דתיות שונות:
+כדי להבין את האמרה הלבנונית הבאה, צריך לעשות סדר במונחים של קבוצות דתיות שונות:
 </p>
 <ul class="org-ul">
 <li><span class='naskh'>كتوليك</span>: יוונים קתולים המקיימים את הריטוּס הביזנטי</li>
@@ -339,7 +339,7 @@ for the JavaScript code in this tag.
 </p>
 
 <p>
-<span class='naskh'>إن كانِ الكنافِة بيدخلها توم، الموراني بحبّ الرُّوم.</span>
+<span class='naskh'>إن كانِ الكْنافِة بيدْخَلْها توم، الموراني بَحُبّ الرُّوم.</span>
 </p>
 
 <p>
@@ -352,7 +352,7 @@ for the JavaScript code in this tag.
 </div>
 </li>
 
-<li><a id="org98c88a5"></a><span class="timestamp-wrapper"><span class="timestamp">&lt;2023-09-25 Mon&gt;</span></span><br />
+<li><a id="orgeb2fc75"></a><span class="timestamp-wrapper"><span class="timestamp">&lt;2023-09-25 Mon&gt;</span></span><br />
 <div class="outline-text-4" id="text-3-1-2">
 <p>
 שברתי את הראש מדוע המלה <span class='naskh'>حامل</span>, שפירושה "אשה בהריון" היא מלה זכרית ומקבלת שמות תואר בזכר. חיטטתי במלונים עד שקלטתי שזו גם המלה ל־"נשא", במובן של נשא של מחלה… ולכן כותבים <span class='naskh'>حامل جديد</span> ולא <span class='naskh'>حامل جديدة</span>…
@@ -360,7 +360,7 @@ for the JavaScript code in this tag.
 </div>
 </li>
 
-<li><a id="org5c1f4f6"></a><span class="timestamp-wrapper"><span class="timestamp">&lt;2023-09-23 Sat&gt;</span></span><br />
+<li><a id="orgc71441b"></a><span class="timestamp-wrapper"><span class="timestamp">&lt;2023-09-23 Sat&gt;</span></span><br />
 <div class="outline-text-4" id="text-3-1-3">
 <p>
 ממשיך ללמוד כרטיסים. לא הוספתי חדשים, אבל שיניתי את אופן הלימוד שלי: כעת כל פעם ש־"הצד השני" של הכרטיס הוא בערבית, אני רושם את המלה באותיות ערביות ומשווה. זו עבודה רבה יותר אבל יש לה יתרונות חשובים:
@@ -382,7 +382,7 @@ for the JavaScript code in this tag.
 </div>
 </li>
 
-<li><a id="orgb375d3e"></a><span class="timestamp-wrapper"><span class="timestamp">&lt;2023-09-21 Thu&gt;</span></span><br />
+<li><a id="orgf73acbc"></a><span class="timestamp-wrapper"><span class="timestamp">&lt;2023-09-21 Thu&gt;</span></span><br />
 <div class="outline-text-4" id="text-3-1-4">
 <p>
 הכרטסת שלי כוללת 4261 כרטיסים. הוספתי 230+ כרטיסים מאז תחילת החודש. זה קצת מאכזב. קיוויתי שאוכל להוסיף מעל לאלף כרטיסים חדשים, ולא קרה. אני צריך להגביר את הקצב לפני תחילת הסמסטר.
@@ -401,13 +401,13 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-orgd6a9833" class="outline-2">
-<h2 id="orgd6a9833"><span class="section-number-2">4</span> <span class='hebrew'>ערבית ספרותית</span>, <span class='latin'>MSA</span>, <span class='ruqaa'>فصحة</span></h2>
+<div id="outline-container-orgd263ea3" class="outline-2">
+<h2 id="orgd263ea3"><span class="section-number-2">4</span> ערבית ספרותית, <span class='latin'>MSA</span>, <span class='ruqaa'>فصحة</span></h2>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Mayer Goldberg (<span class='hebrew'>מֵאִיר גּוֹלְדְּבֵּרְג</span>)</p>
-<p class="date">Created: 2023-09-27 Wed 03:23</p>
+<p class="date">Created: 2023-10-04 Wed 22:18</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
