--- a/tc.html
+++ b/tc.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-10-19 Sun 12:46 -->
+<!-- 2025-10-19 Sun 13:52 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>@@html:&amp;#x202e;@@ועדת הוראה, שנה א'@@html:&amp;#x202c;@@</title>
@@ -203,20 +203,57 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgc0655f6">1. תקציר</a></li>
-<li><a href="#org2051b2d">2. למי לפנות</a></li>
-<li><a href="#org11da7b1">3. יצירת קשר</a></li>
-<li><a href="#org804f774">4. נהלים</a></li>
+<li><a href="#orga368e63">1. תקציר</a>
+<ul>
+<li><a href="#orge2248fb">1.1. במה ועדת הוראה מטפלת</a></li>
+<li><a href="#orgdc293d4">1.2. במה ועדת הוראה אינה מטפלת</a></li>
+<li><a href="#orgf43bb2f">1.3. דוגמאות</a></li>
+</ul>
+</li>
+<li><a href="#org7c79cf0">2. למי לפנות</a></li>
+<li><a href="#orgd5351d2">3. יצירת קשר</a></li>
+<li><a href="#orge2132b9">4. נהלים</a></li>
 </ul>
 </div>
 </div>
 <script src="hebrew-support/gmayer-org-mode-web.js"></script>
 
-<div id="outline-container-orgc0655f6" class="outline-2">
-<h2 id="orgc0655f6"><span class="section-number-2">1.</span> תקציר</h2>
+<div id="outline-container-orga368e63" class="outline-2">
+<h2 id="orga368e63"><span class="section-number-2">1.</span> תקציר</h2>
+<div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org2051b2d" class="outline-2">
-<h2 id="org2051b2d"><span class="section-number-2">2.</span> למי לפנות</h2>
+<div id="outline-container-orge2248fb" class="outline-3">
+<h3 id="orge2248fb"><span class="section-number-3">1.1.</span> במה ועדת הוראה מטפלת</h3>
+<div class="outline-text-3" id="text-1-1">
+<ul class="org-ul">
+<li>בקשות למועדים מיוחדים</li>
+<li>חריגות מנהלי האוניברסיטה בכל הנוגע לקורסים ולהתנהלות המרצים</li>
+<li>סיוע לתלמידים בבניה של תוכניות לימודים ופרישׂת התואר</li>
+<li>הפניה של תלמידים שנתקלים בקשיים שונים במסגרת לימודיהם לגורמים המוסמכים לסייע להם (לרוב בדיקנט הסטודנטים)</li>
+<li>טיפול בבעיות טכניות שעלו בביצוע הבחינות (מול מדור בחינות וסגל הקורס)</li>
+</ul>
+</div>
+</div>
+<div id="outline-container-orgdc293d4" class="outline-3">
+<h3 id="orgdc293d4"><span class="section-number-3">1.2.</span> במה ועדת הוראה אינה מטפלת</h3>
+<div class="outline-text-3" id="text-1-2">
+<ul class="org-ul">
+<li>ועדת הוראה <b>איננה מתפקדת כמרצה־על בקורסים השונים</b>, ואיננה יכולה להחליף את המרצים בקורסים. אנחנו לא יכולים לטפל ב־
+<ul class="org-ul">
+<li>תלונות לגבי קושי של שאלות בבחינה או שעורי בית</li>
+<li>תלונות לגבי רמת הבדיקה של שאלות בבחינה או שעורי בית</li>
+<li>ערעורים על החלטות לגיטימיות של מרצים בקורסים שלהם</li>
+</ul></li>
+</ul>
+</div>
+</div>
+<div id="outline-container-orgf43bb2f" class="outline-3">
+<h3 id="orgf43bb2f"><span class="section-number-3">1.3.</span> דוגמאות</h3>
+</div>
+</div>
+
+<div id="outline-container-org7c79cf0" class="outline-2">
+<h2 id="org7c79cf0"><span class="section-number-2">2.</span> למי לפנות</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 ועדת הוראה כוללת חברי סגל שונים, וכל אחד מטפל בנושאים שונים. על מנת לזרז את הטיפול בפניה שלכם ולא להטריד אנשים שלא יכולים לסייע לכם, אנא ודאו שאתם פונים לאנשים הנכונים:
@@ -231,8 +268,8 @@
 </div>
 </div>
 
-<div id="outline-container-org11da7b1" class="outline-2">
-<h2 id="org11da7b1"><span class="section-number-2">3.</span> יצירת קשר</h2>
+<div id="outline-container-orgd5351d2" class="outline-2">
+<h2 id="orgd5351d2"><span class="section-number-2">3.</span> יצירת קשר</h2>
 <div class="outline-text-2" id="text-3">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
@@ -277,8 +314,8 @@
 </div>
 </div>
 
-<div id="outline-container-org804f774" class="outline-2">
-<h2 id="org804f774"><span class="section-number-2">4.</span> נהלים</h2>
+<div id="outline-container-orge2132b9" class="outline-2">
+<h2 id="orge2132b9"><span class="section-number-2">4.</span> נהלים</h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>שעות הקבלה לועדת הוראה הן בזום בלבד! במקרים חריגים ניתן לקבוע שעות קבלה מיוחדות, אבל <b>אין שעות קבלה פרונטליות לועדת הוראה</b></li>
@@ -290,17 +327,21 @@
 <li>פניה דרך <a href="https://cs-sr.cs.bgu.ac.il/">מערכת הפניות לוועדת הוראה</a> מבטיחה שכל הגורמים הרלוונטיים יטפלו בפניה שלכם, לפי הסדר</li>
 <li>אם בכל זאת תפנו אלי באופן אישי, אני אפנה אתכם ל<a href="https://cs-sr.cs.bgu.ac.il/">מערכת הפניות לוועדת הוראה</a>, כדי להבטיח שהטיפול יהיה נכון</li>
 </ul></li>
+<li>אם אתם מעוניינים ללמוד בחו"ל במסגרת התוכנית לחילופי סטודנטים, עליכם לפנות ל<a href="https://www.bgu.ac.il/general/studies-abroad/">טופס הממוחשב לחילופי סטודנטים</a> בפורטל הסטודנטיאלי שבאתר האוניברסיטה
+<ul class="org-ul">
+<li>נציג ועדת הוראה (אני) הוא <b>רק חוליה אחת</b> בטיפול בבקשה שלכם</li>
+<li>עליכם לפנות באמצעות ה<a href="https://www.bgu.ac.il/general/studies-abroad/">טופס הממוחשב לחילופי סטודנטים</a> על מנת להבטיח שכל הגורמים הרלוונטיים יראו את הפניה שלכם, וכל אחד יבצע את החלק שלו בטיפול</li>
+</ul></li>
 <li>בכל נושא אחר, הדרך המועדפת לפנות אלי היא ב<a href="mailto:gmayer@little-lisper.org">דוא"ל</a>, <b>בצירוף שם מלא, מספר תעודת זהות, מספר טלפון, וכל המסמכים והראיות המבססים את טענותיכם</b></li>
 <li>אתם יכולים לפנות למספר הטלפון הסלולארי שלי בוואצאפ, בכל שעה משעות היום. הטלפון "על שקט", ואני אענה לכם כשאתפנה. בכל מקרה, <b>נא לציין שם מלא ומספר תעודת זהות</b></li>
 <li>החלטות מתקבלות לאחר שיקול דעת, בדיקת הנסיבות והראיות, והתייעצות עם אנשים נוספים, כולל חברים אחרים בועדת הוראה וגורמים שונים בהנהלת המחלקה. שום החלטה לא תתקבל "במקום", באופן פרונטלי או בשעות הקבלה, ללא קשר למה שתאמרו</li>
-<li></li>
 </ul>
 </div>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: ‪&#x202e;מֵאִיר גּוֹלְדְבֶּרְג&#x202c;</p>
-<p class="date">Created: 2025-10-19 Sun 12:46</p>
+<p class="date">Created: 2025-10-19 Sun 13:52</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
